--- a/srcs/backend/package.json
+++ b/srcs/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "migrate": "node db/migrations.js",
+    "migrate": "node db/migrate.js",
     "dev": "npm run migrate && nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,9 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "debug": "^4.4.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.14.1"
   },
   "devDependencies": {
