--- a/srcs/frontend/package.json
+++ b/srcs/frontend/package.json
@@ -1,6 +1,7 @@
 {
     "name": "front",
     "version": "0.1.0",
+    "proxy": "http://localhost:5000",
     "private": true,
     "dependencies": {
         "axios": "^1.5.1",
@@ -37,4 +38,5 @@
     "devDependencies": {
         "react-router-dom": "^7.4.1"
     }
+
 }
