--- a/srcs/frontend/package.json
+++ b/srcs/frontend/package.json
@@ -4,11 +4,15 @@
     "proxy": "http://localhost:5000",
     "private": true,
     "dependencies": {
+        "@radix-ui/react-slot": "^1.2.0",
         "axios": "^1.5.1",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
         "cra-template": "1.2.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
+        "tailwind-merge": "^3.2.0",
         "web-vitals": "^4.2.4"
     },
     "scripts": {
@@ -36,7 +40,9 @@
         ]
     },
     "devDependencies": {
-        "react-router-dom": "^7.4.1"
+        "autoprefixer": "^10.4.21",
+        "postcss": "^8.5.3",
+        "react-router-dom": "^7.4.1",
+        "tailwindcss": "^3.0.0"
     }
-
 }
