--- a/srcs/frontend/package.json
+++ b/srcs/frontend/package.json
@@ -5,6 +5,7 @@
     "private": true,
     "dependencies": {
         "@radix-ui/react-slot": "^1.2.0",
+        "@radix-ui/react-tabs": "^1.1.9",
         "axios": "^1.5.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -13,6 +14,7 @@
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
         "tailwind-merge": "^3.2.0",
+        "tailwindcss-radix": "^4.0.2",
         "web-vitals": "^4.2.4"
     },
     "scripts": {
