--- a/srcs/frontend/package.json
+++ b/srcs/frontend/package.json
@@ -4,12 +4,14 @@
     "proxy": "http://localhost:5000",
     "private": true,
     "dependencies": {
+        "@radix-ui/react-navigation-menu": "^1.2.10",
         "@radix-ui/react-slot": "^1.2.0",
         "@radix-ui/react-tabs": "^1.1.9",
         "axios": "^1.5.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cra-template": "1.2.0",
+        "lucide-react": "^0.503.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
